--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: 暢
-last_name: 之之
+first_name: 暢之之
 email: changzhijiang528@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
