--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,9 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: 暢之之的随笔 # blog_name will be displayed in your blog page
-blog_nav_title: 随笔 # your blog must have a title for it to be displayed in the nav bar
+blog_nav_title:
+  zh: 随笔
+  en: Blog 
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 
