--- a/_config.yml
+++ b/_config.yml
@@ -169,7 +169,7 @@ collections:
     defaults:
       layout: post
     output: true
-    permalink: /projects/:path/
+    permalink: /news/:path/
   projects:
     output: true
     permalink: /projects/:path/
