--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  欢迎各位老师、同行通过邮件与我联系、探讨问题或开展合作。
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
