--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ facebook_id: # your facebook id
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
-contact_note: > welcome
+contact_note: > 欢迎各位老师、同行通过邮件与我联系、探讨问题或开展合作。
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
