--- a/_config.yml
+++ b/_config.yml
@@ -268,8 +268,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Jiang, 蒋]
+  first_name: [Changzhi, C., 畅之]
 
   style: apa
   locale: en
